# AMIE

./: .gitignore  .pre-commit-config.yaml  AMIE_v0.1.ipynb  README.md  amie_github_issues.csv  amie_spec.xml  pyproject.toml
.github/workflows/: ci.yml
config/: config.yaml
config/backtest/: default.yaml
config/data/: synthetic.yaml
config/model/: kalman.yaml
config/training/: default.yaml
data/features/run-20251022185618/: 2024-01-01.parquet  _metadata.json
docs/: MODEL_CARD.md
outputs/2025-10-22/20-56-18/.hydra/: config.yaml  hydra.yaml
research/notebooks/: metrics.csv
scripts/: compute_features.py  generate_golden_files.py  train_model.py
src/: test.ipynb
src/amie/: __init__.py
src/amie/backtest/: engine.py  metrics.py
src/amie/core/: __init__.py  constants.py  types.py
src/amie/data/: __init__.py  replay.py  validation.py
src/amie/features/: __init__.py  store.py  transforms.py
src/amie/models/: __init__.py  base.py  kalman.py  registry.py
src/amie/strategy/: execution.py  policy.py  risk.py
src/amie/utils/: __init__.py  logging.py  profiling.py
tests/: test_smoke.py
tests/fixtures/golden/: synthetic_data_seed42.parquet  synthetic_data_seed42.sha256
tests/integration/: test_feature_pipeline.py  test_model_pipeline.py  test_synthetic_determinism.py
tests/performance/: test_feature_latency.py  test_model_latency.py
tests/unit/: test_backtest.py  test_execution.py  test_feature_store.py  test_features.py  test_kalman.py  test_metrics.py  test_policy.py  test_registry.py  test_risk.py  test_validation.py
(+15 files in other folders)
