[tool.poetry]
name = "amie"
version = "0.1.0"
description = "AMIE project scaffold."
authors = ["Ivan Yoga <ivan@example.com>"]
readme = "README.md"
package-mode = true

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.0"
pandas = "^2.1.0"
scipy = "^1.11.0"
pytest = "^7.4.0"
ruff = "^0.5.0"
mypy = "^1.7.0"
hypothesis = "^6.82.0"
pandera = "^0.18.0"
hydra-core = "^1.3.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.1.0"
pytest-benchmark = "^4.0.0"
jupyter = "^1.0.0"
matplotlib = "^3.8.0"
seaborn = "^0.13.0"

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
